--- a/application/build.gradle
+++ b/application/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation(project(":domain"))
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.11.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
