--- a/application/build.gradle
+++ b/application/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation(project(":domain"))
+    implementation 'io.vavr:vavr:0.10.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.11.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
